--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsdom": "^20.0.3",
     "postcss": "^8.4.20",
     "prettier": "^2.7.1",
+    "stylus": "^0.59.0",
     "tailwindcss": "^3.2.4",
     "vite": "^4.0.0",
     "vitest": "^0.25.6"
