--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   },
   "dependencies": {
     "gsap": "^3.11.4",
-    "vue": "^3.2.45"
+    "install": "^0.13.0",
+    "npm": "^9.3.0",
+    "vue": "^3.2.45",
+    "vue-agile": "^2.0.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-prettier": "^7.0.0",
+    "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/test-utils": "^2.2.6",
+    "@vue/tsconfig": "^0.1.3",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
