--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@tailwindcss/line-clamp": "^0.4.2",
     "gsap": "^3.11.4",
     "install": "^0.13.0",
     "npm": "^9.3.0",
