--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.2",
     "gsap": "^3.11.4",
+    "lodash.throttle": "^4.1.1",
     "vue": "^3.2.45",
     "vue-agile": "^2.0.0",
+    "vue-router": "^4.1.6",
     "vue-virtual-scroll-grid": "^1.10.1"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
+    "@types/lodash.throttle": "^4.1.7",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
